2007-07-12  Daniel Franke  <franke.daniel@gmail.com>

PR fortran/32634
        PR fortran/32727
        * module.c: Reverted Paul's patch from 2007-07-10.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126572 138bc75d-0d04-0410-961f-82ee72b054a4